--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -58,7 +58,7 @@
                           <div class="col-sm-5 text-right">
 
                             <button *ngIf="placeOrderBody.data.orderData.ServiceId == 2" data-toggle="modal"
-                              data-target="#addlocation" id="addAddModal" class="add-new">
+                              data-target="#addlocation" id="addAddModal" class="add-new add-newadrbtn">
                               <img src="assets/images/add-address.svg"> Add New Address
                             </button>
                           </div>
